Add CSRF protection to a specific form

--- a/src/biblioteka/templates/biblioteka/loans/list.html
+++ b/src/biblioteka/templates/biblioteka/loans/list.html
@@ -17,6 +17,7 @@
 
 {% if loans %}
 <form action="{% url 'biblioteka:loans/return' %}" method="post">
+  {% csrf_token %}
   <table>
     <thead>
       <tr>
